--- a/404.html
+++ b/404.html
@@ -385,7 +385,9 @@
 <nav class="navbar navbar-expand-lg navbar-light compensate-for-scrollbar" id="navbar-main">
   <div class="container-xl">
 
-    
+    <div style="padding-right: 40px">
+      <img src="sjtu.png" />
+    </div>
     <div class="d-none d-lg-inline-flex">
       <a class="navbar-brand" href="./">Lingzhi Zhao</a>
     </div>
