--- a/index.html
+++ b/index.html
@@ -1052,8 +1052,11 @@
       Sheng Yang</span>
   </span>
   (2021).
+  <!--
   <a href="./publication/tip2021.html">Adaptive Streaming of 360 Videos with Perfect, Imperfect, and Unknown FoV Viewing Probabilities in Wireless Networks</a>.
-  In <em>IEEE Trans. Image Process. <strong>(TIP)</strong></em>.
+  -->
+  <a href="">Adaptive Streaming of 360 Videos with Perfect, Imperfect, and Unknown FoV Viewing Probabilities in Wireless Networks</a>.
+  In <em>IEEE Trans. Image Process. <strong>(TIP)</strong></em>, major revision.
   
   <p>
 
@@ -1116,9 +1119,12 @@
       Zhi Liu</span>
   </span>
   (2021).
+  <!--
   <a href="./publication/comex2021.html">Optimal Adaptive Streaming of A Scalable Multi-view Video via Rate Splitting and SIC</a>.
   In <em>IEICE Commun. Express <strong>(ComEX)</strong></em>.
-  
+  -->
+  <a href="https://www.jstage.jst.go.jp/article/comex/advpub/0/advpub_2021XBL0087/_article/-char/en" target="_blank">Optimal Adaptive Streaming of A Scalable Multi-view Video via Rate Splitting and SIC</a>.
+  In <em>IEICE Commun. Express <strong>(ComEX)</strong></em>.
   <p>
 
 
@@ -1180,9 +1186,12 @@
       Derrick Wing Kwan</span>
   </span>
   (2021).
+  <!--
   <a href="./publication/twc2021.html">Power-Efficient Wireless Streaming of Multi-Quality Tiled 360 VR Video in MIMO-OFDMA Systems</a>.
   In <em>IEEE Trans. Wireless Commun. <strong>(TWC)</strong></em>.
-  
+  -->
+  <a href="https://ieeexplore.ieee.org/abstract/document/9388911" target="_blank">Power-Efficient Wireless Streaming of Multi-Quality Tiled 360 VR Video in MIMO-OFDMA Systems</a>.
+  In <em>IEEE Trans. Wireless Commun. <strong>(TWC)</strong></em>.
   <p>
 
 
@@ -1244,7 +1253,11 @@
       Sheng Yang</span>
   </span>
   (2020).
+  <!--
   <a href="./publication/globecom2020.html">Optimal Streaming of 360 VR Videos with Perfect, Imperfect and Unknown FoV Viewing Probabilities</a>.
+  In <em>IEEE Global Communications Conference <strong>(GLOBECOM)</strong></em>.
+  -->
+  <a href="https://ieeexplore.ieee.org/document/9322648" target="_blank">Optimal Streaming of 360 VR Videos with Perfect, Imperfect and Unknown FoV Viewing Probabilities</a>.
   In <em>IEEE Global Communications Conference <strong>(GLOBECOM)</strong></em>.
   
   <p>
