update CV and Project

--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
       <p>I am a master student in the Institute of Wireless Communication Technology, Shanghai Jiao Tong University, advised by Prof. <a href="http://iwct.sjtu.edu.cn/personal/yingcui/index.html" target="_blank">Ying Cui</a>.</p>
 <p>I enjoy sports including swimming, basketball, tennis and so on. I&rsquo;ve learnt Japanese a bit. I am a huge fan of Japanese anime.</p>
 <p>
-  <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="./resume.pdf" target="_blank">resumé</a>.</p>
+  <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="./uploads/resume.pdf" target="_blank">resumé</a>.</p>
 
     </div>
 
@@ -1477,7 +1477,10 @@
 
 <div class="view-list-item">
   <i class="fas fa-project-diagram pub-icon" aria-hidden="true"></i>
+  <!--
   <a href="./project/example.html" >Adaptive Network Information Exposure for Live Streaming in Vehicle Networks</a>
+  -->
+  <a href="" >Adaptive Network Information Exposure for Live Streaming in Vehicle Networks</a>
 
   
 
