--- a/index.html
+++ b/index.html
@@ -1056,7 +1056,7 @@
   <a href="./publication/tip2021.html">Adaptive Streaming of 360 Videos with Perfect, Imperfect, and Unknown FoV Viewing Probabilities in Wireless Networks</a>.
   -->
   <a href="">Adaptive Streaming of 360 Videos with Perfect, Imperfect, and Unknown FoV Viewing Probabilities in Wireless Networks</a>.
-  In <em>IEEE Trans. Image Process. <strong>(TIP)</strong></em>, major revision.
+  In <em>IEEE Trans. Image Process. <strong>(TIP)</strong></em>.
   
   <p>
 
