--- a/index.html
+++ b/index.html
@@ -1480,7 +1480,7 @@
   <!--
   <a href="./project/example.html" >Adaptive Network Information Exposure for Live Streaming in Vehicle Networks</a>
   -->
-  <a href="" >Adaptive Network Information Exposure for Live Streaming in Vehicle Networks</a>
+  <a href="" >Network Information Exposure for Live Streaming in Vehicle Networks</a>
 
   
 
