--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,9 @@
 
 
 
-
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="./publication/tip2021/tip2021.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
   
 
 
@@ -1135,7 +1137,9 @@
 
 
   
-
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="./publication/comex2021/ComEX2021.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
@@ -1203,7 +1207,9 @@
 
   
 
-
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="./publication/twc2021/TWC21.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
