--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
         
         <h3>
           <a href="https://www.sjtu.edu.cn/" target="_blank" rel="noopener">
-          <span>Shanghai Jiao Tong Universityf</span>
+          <span>Shanghai Jiao Tong University</span>
           </a>
         </h3>
         
