--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
           
         
         <li>
-          <a href="https://scholar.google.com/citations?user=9vh3Qu4AAAAJ&hl=zh-CN&oi=sra" target="_blank" rel="noopener" aria-label="google-scholar">
+          <a href="https://scholar.google.com/citations?user=9vh3Qu4AAAAJ&hl=zh-CN" target="_blank" rel="noopener" aria-label="google-scholar">
             <i class="ai ai-google-scholar big-icon"></i>
           </a>
         </li>
