--- a/index.html
+++ b/index.html
@@ -1492,7 +1492,7 @@
   <!--
   <a href="./project/example.html" >Adaptive Network Information Exposure for Live Streaming in Vehicle Networks</a>
   -->
-  <a href="" >Network Information Exposure for Adaptive Vdieo Streaming</a>
+  <a href="" >Network Information Exposure for Adaptive Video Streaming</a>
 
   
 
