--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
   <a href="" target="_blank">An optimization framework for general rate
 splitting for general multicast</a>.
   </br>
-    In <em>IEEE Trans. Wireless Commun. <strong>(TWC)</strong></em>, 2022, under review
+    <em>IEEE Trans. Wireless Commun. <strong>(TWC)</strong></em>, 2022, under review
   
   <p>
 
@@ -856,7 +856,7 @@ splitting for general multicast</a>.
   -->
   <a href="" target="_blank">Rate splitting for general multicast</a>.
   </br>
-  Submitted to <em>IEEE International Conference on Communications  <strong>(ICC)</strong></em>, 2022
+  submitted to <em>IEEE International Conference on Communications  <strong>(ICC)</strong></em>, 2022
   
   <p>
 
@@ -905,7 +905,7 @@ splitting for general multicast</a>.
   -->
   <a href="https://ieeexplore.ieee.org/document/9503325" target="_blank">Adaptive streaming of 360 videos with perfect, imperfect, and unknown FoV viewing probabilities in wireless networks</a>.
   </br>
-  In <em>IEEE Trans. Image Process. <strong>(TIP)</strong></em>, 2021
+  <em>IEEE Trans. Image Process. <strong>(TIP)</strong></em>, 2021
   
   <p>
 
@@ -974,7 +974,7 @@ splitting for general multicast</a>.
   -->
   <a href="https://ieeexplore.ieee.org/abstract/document/9388911" target="_blank">Power-efficient wireless streaming of multi-quality tiled 360 VR video in MIMO-OFDMA systems</a>.
   </br>
-  In <em>IEEE Trans. Wireless Commun. <strong>(TWC)</strong></em>, 2021
+  <em>IEEE Trans. Wireless Commun. <strong>(TWC)</strong></em>, 2021
   <p>
 
 
@@ -1040,7 +1040,7 @@ splitting for general multicast</a>.
   -->
   <a href="https://www.jstage.jst.go.jp/article/comex/advpub/0/advpub_2021XBL0087/_article/-char/en" target="_blank">Optimal adaptive streaming of a scalable multi-view video via rate splitting and SIC</a>.
   </br>
-  In <em>IEICE Commun. Express <strong>(ComEX)</strong></em>, 2021
+  <em>IEICE Commun. Express <strong>(ComEX)</strong></em>, 2021
   <p>
 
 
@@ -1110,7 +1110,7 @@ splitting for general multicast</a>.
   -->
   <a href="https://ieeexplore.ieee.org/document/9322648" target="_blank">Optimal streaming of 360 VR videos with perfect, imperfect and unknown FoV viewing probabilities</a>.
   </br>
-  In <em>IEEE Global Communications Conference <strong>(GLOBECOM)</strong></em>, 2020
+  <em>IEEE Global Communications Conference <strong>(GLOBECOM)</strong></em>, 2020
   
   <p>
 
