--- a/index.html
+++ b/index.html
@@ -618,6 +618,12 @@
             <i class="fab fa-linkedin big-icon"></i>
           </a>
         </li>
+
+        <li>
+          <a href="https://twitter.com/lingzhi_zhao12" target="_blank" rel="noopener" aria-label="twitter">
+            <i class="fab fa-twitter big-icon"></i>
+          </a>
+        </li>
         
       </ul>
 
@@ -854,7 +860,7 @@ splitting for general multicast</a>.
   -->
   <a href="" target="_blank">Rate splitting for general multicast</a>.
   </br>
-  submitted to <em>IEEE International Conference on Communications  <strong>(ICC)</strong></em>, 2022
+  <em>IEEE International Conference on Communications  <strong>(ICC)</strong></em>, 2022
   
   <p>
 
