--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
     <h1>About Me</h1>
 
     <div class="article-style">
-      <p>I amf a second-year Ph.D. student in <a href="https://cs.illinois.edu/" target="_blank">Computer Science</a> at the <a href="https://illinois.edu/" target="_blank">University of Illinois Urbana-Champaign</a>. I am fortunate to be advised by Prof. <a href="https://cs.illinois.edu/about/people/faculty/klara" target="_blank">Klara Nahrstedt</a> at the <a href="https://monet.cs.illinois.edu/" target="_blank">Multimedia Operating Systems and Networking (MONET)</a> group.</p>
+      <p>I am a second-year Ph.D. student in <a href="https://cs.illinois.edu/" target="_blank">Computer Science</a> at the <a href="https://illinois.edu/" target="_blank">University of Illinois Urbana-Champaign</a>. I am fortunate to be advised by Prof. <a href="https://cs.illinois.edu/about/people/faculty/klara" target="_blank">Klara Nahrstedt</a> at the <a href="https://monet.cs.illinois.edu/" target="_blank">Multimedia Operating Systems and Networking (MONET)</a> group.</p>
       <p>My current research interest is multimedia system and networking with applications of adaptive video streaming and live 360 video.</p>
       <p>Before that, I obtained my master degree from <a href="https://en.sjtu.edu.cn/" target="_blank">Shanghai Jiao Tong University</a> in the Institute of Wireless Communication Technology (IWCT) where I worked on wireless 360 video streaming and rate splitting in wireless communication.</p>
       <p>I enjoy various sports including swimming, SCUBA diving, badminton, basketball, ice skating, and so on. I am a huge fan of <a href="https://bangumi.tv/user/nicolas" target="_blank">Japanese animes</a> and T-ara: ).</p>
