--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
   <a class="btn btn-outline-primary btn-page-header btn-sm" href="" target="_blank" rel="noopener">
     PDF
   </a>
-  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/chutoutian/eA3C_ABR" target="_blank" rel="noopener">
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/chutoutian/ICC24" target="_blank" rel="noopener">
     Code and Dataset
   </a>
     
@@ -1019,7 +1019,7 @@
   <a class="btn btn-outline-primary btn-page-header btn-sm" href="" target="_blank" rel="noopener">
     Technical Report
   </a>
-  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/chutoutian/eA3C_ABR" target="_blank" rel="noopener">
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/chutoutian/ICC24" target="_blank" rel="noopener">
     Code and Dataset
   </a>
     
