--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
 
     <div class="article-style">
       <p>I am a third-year Ph.D. student in <a href="https://cs.illinois.edu/" target="_blank">Computer Science</a> at the <a href="https://illinois.edu/" target="_blank">University of Illinois Urbana-Champaign</a>. I am fortunate to be advised by Prof. <a href="https://cs.illinois.edu/about/people/faculty/klara" target="_blank">Klara Nahrstedt</a> at the <a href="https://monet.cs.illinois.edu/" target="_blank">Multimedia Operating Systems and Networking (MONET)</a> group.</p>
-      <p>My current research interests are 1) multimedia system and networking with applications of adaptive video streaming, cloud VR gaming, and live 360 video; 2) underwater communication on mobile devices. Previously, I did some research in wireless communication with a focus on multiple access and resouce allocation.</p>
+      <p>My current research interests are 1) multimedia system and networking with applications of adaptive video streaming, cloud VR gaming, and live 360 video; 2) underwater communication on mobile devices. Previously, I did some research in wireless communication with a focus on multiple access and resource allocation.</p>
       
       <!--
       <p>Before that, I obtained my master degree from <a href="https://en.sjtu.edu.cn/" target="_blank">Shanghai Jiao Tong University</a> in the Institute of Wireless Communication Technology (IWCT) where I worked on wireless 360 video streaming and rate splitting in wireless communication.</p>
