--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
       <!--
       <p>Before that, I obtained my master degree from <a href="https://en.sjtu.edu.cn/" target="_blank">Shanghai Jiao Tong University</a> in the Institute of Wireless Communication Technology (IWCT) where I worked on wireless 360 video streaming and rate splitting in wireless communication.</p>
       -->
-      <p>I really enjoy water-related sports like swimming, SCUBA diving, and surfing, but I'm always interested in exploring various activities. I am a huge fan of <a href="https://bangumi.tv/user/nicolas" target="_blank">animes</a>.</p>
+      <p>I really enjoy water-related sports like swimming, SCUBA diving, and surfing, but I'm always interested in exploring various activities.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="./uploads/resume.pdf" target="_blank">resumé</a>.</p>
 
