update aqua website and resume

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
       
       <p>I spent two wonderful summers as a Research Intern at <a href="https://www.bytedance.com/en/" target="_blank">ByteDance</a>’s Multimedia Lab in San Diego, working with <a href="https://www.linkedin.com/in/shu-shi-651bb71b/" target="_blank">Shu Shi</a> on VR streaming.</p>
 
-      <p>I enjoy water-related activities like swimming, SCUBA diving, surfing and jet ski, but I'm always interested in exploring various sports. I have built interesting underwater communication systems on smartphones and integrated them with generative AI. Check our <a href="https://arxiv.org/abs/2502.10891" target="_blank">AquaScope</a> and <a href="https://arxiv.org/abs/2510.21722" target="_blank">AquaVLM</a> papers!</p>
+      <p>I enjoy water-related activities like swimming, SCUBA diving, surfing and jet ski, but I'm always interested in exploring various sports. I have built interesting underwater communication systems on smartphones and integrated them with generative AI. Check our cool projects <a href="https://chutoutian.github.io/aquascope.github.io/" target="_blank">AquaScope</a> and <a href="https://chutoutian.github.io/aquavlm.github.io/" target="_blank">AquaVLM</a> !</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="./uploads/resume.pdf" target="_blank">resumé</a>.</p>
 
@@ -1056,7 +1056,15 @@
     -->
     <a href="https://arxiv.org/abs/2502.10891" target="_blank">AquaScope: Reliable Underwater Image Transmission on Mobile Devices</a>.
     </br>
-      <em>arXiv</em>
+        <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2502.10891" target="_blank" rel="noopener">
+    arXiv
+  </a>
+      <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://chutoutian.github.io/aquascope.github.io/" target="_blank" rel="noopener">
+    Website
+  </a>
+    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/chutoutian/AquaScope" target="_blank" rel="noopener">
+    Code
+  </a>
     <p>
     </p>
   
@@ -1089,7 +1097,15 @@
     <a href="https://arxiv.org/abs/2510.21722" target="_blank">AquaVLM: Improving Underwater Situation Awareness with Mobile Vision Language Models</a>.
     </br>
 
-      <em>arXiv</em>
+    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2510.21722" target="_blank" rel="noopener">
+    arXiv
+  </a>
+      <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://chutoutian.github.io/aquavlm.github.io/" target="_blank" rel="noopener">
+    Website
+  </a>
+    <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/underwater-uiuc/AquaVLM" target="_blank" rel="noopener">
+    Code
+  </a>
     
     <p>
     </p>
